--- a/Plugins/Developer/BlankPlugin2/BlankPlugin2.uplugin
+++ b/Plugins/Developer/BlankPlugin2/BlankPlugin2.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion" : 3,
 	
-	"FriendlyName" : "Blank Example Plugin",
+	"FriendlyName" : "Blank Example Plugin 2",
 	"Version" : 1,
 	"VersionName" : "1.0",
 	"CreatedBy" : "Epic Games, Inc.",
